<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:background="@color/background_full"
    android:paddingEnd="8dp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:background="@color/secondary"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:title="@string/today_headlines"
            app:maxLines="2"
            app:expandedTitleTextAppearance="@style/Toolbar.TitleText"
            app:expandedTitleGravity="start"
            app:expandedTitleMarginStart="4dp"
            app:expandedTitleMarginBottom="0dp"
            app:collapsedTitleTextColor="@color/primary"
            app:collapsedTitleTextAppearance="@style/Toolbar.TitleText.collapsed"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/secondary"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

<!--                <com.google.android.material.textview.MaterialTextView-->
<!--                    android:id="@+id/title"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/today_headlines"-->
<!--                    android:layout_marginBottom="16dp"-->
<!--                    app:layout_collapseMode="parallax"-->
<!--                    android:padding="8dp"-->
<!--                    style="@style/textHeading"-->
<!--                    app:layout_collapseParallaxMultiplier="0.7"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    />-->





        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:scrollbars="none">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:singleSelection="true"
                app:chipSpacingHorizontal="12dp"
                app:singleLine="true"
                app:checkedChip="@+id/all"
                android:elevation="4dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />


                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technology"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science"
                    android:padding="@dimen/chip_padding"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


    </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScroll"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArticles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/article_single_item"
                android:layout_marginBottom="8dp"

                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


<!--    <androidx.constraintlayout.widget.Group-->
<!--        android:id="@+id/group"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:constraint_referenced_ids="swipeRefresh" />-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/headlines_not_available"
        android:layout_gravity="center"
        style="@style/textBody1" />






<com.facebook.shimmer.ShimmerFrameLayout
    android:id="@+id/shimmer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    android:visibility="gone"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    app:layout_constraintTop_toBottomOf="@+id/horizontalScroll"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_gravity="top">
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    <include layout="@layout/placeholder_article_view"/>
    </LinearLayout>


</com.facebook.shimmer.ShimmerFrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>